// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Meta /> should match snapshot with label, icon for Primary variant 1`] = `
<span
  class="base root_base"
>
  <i
    class="base display_block small_mobile_base variant_default_base variant_primary_base"
    role="presentation"
  >
    <svg
      class="base display_block width_full width_full"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
      />
    </svg>
  </i>
  <span
    class="base root_base sizes_4_base align_left colours_neutral_base fontWeight_normal_base"
  >
    Hello World!
  </span>
</span>
`;

exports[`<Meta /> should match snapshot with label, icon for Secondary variant 1`] = `
<span
  class="base root_base"
>
  <i
    class="base display_block small_mobile_base variant_default_base variant_secondary_base"
    role="presentation"
  >
    <svg
      class="base display_block width_full width_full"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
      />
    </svg>
  </i>
  <span
    class="base root_base sizes_4_base align_left colours_neutral_base fontWeight_normal_base"
  >
    Hello World!
  </span>
</span>
`;
